--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 body {
-    background-color: red;
+    background-color: #222930;
+    /*font-family: 'Lobster', sans-serif;*/
+    color: white;
 }
